2005-02-04  Francois Dumont  <dums@stlport...>

	* stlport/stl/_alloc.c: Fix of the _S_refill method in the lock free 
	implementation thanks Felix Wyss.

	* stlport/stl/_hashtable.h: _M_get_elem_ite set as static when possible
	to fix a MSVC6 problem thanks Michael Fink report.

	* stlport/new, config/stl_evc.h: EVC patch for MFC support from Michael Fink.

	* build/Makefiles/nmake/evc3.mak, evc4.mak: Warning level raised to 4
	by Michael Fink.

	* doc/README.evc3, README.evc4 doc update from Michael Fink.

	* src/vc_warning_disable.h: Add warning 4201 and 4214 disabling for EVC.

2005-01-31  Francois Dumont  <dums@stlport...>

	* Mac OS X portage thanks Zdenek Nemec.

	* stlport/stl/_hashtable.c: Fix of the _M_copy_from method thanks Jay.

	* stlport/stl/_vector.c: Fix of the _M_insert_fill_aux method thanks
	Mike Roberts report.

	* test/unit/unordered_test.cpp: Add of a test for the hashtable fix above.

	* src/vc_warning_disable.h: Add of the missing 4503 warning disable for MSVC6.

	* test/unit/nmake-vc-common.mak: Add of the _STLP_DEBUG_UNINITIALIZED macro
	definition for the debug and stldebug rules.

2005-01-28  Francois Dumont  <dums@stlport...>

	* Application of a patch from Michael Fink for EVC MIPS.

2005-01-27  Francois Dumont  <dums@stlport...>

	* stlport/deque, list, map, set, slist, stack, valarray: _STLP_WHOLE_VENDOR_STD
	replaced by the official _STLP_IMPORT_VENDOR_STD macro.
	
	* stlport/stl/_algobase.h: Add find algo overload for char* and const char* 
	forwarding the call to the memchr C function thanks Jim Xochellis report.
	
	* test/unit/find_test.cpp: Add check for the new find overload.
	
	* test/unit/cmath_test.cpp: Fix of the atan and atan2 tests to avoid precision
	problems.
	
	* test/unit/ptrspec_test.cpp: Add check for containers of function pointers and
	member function pointers.

	* test/unit/set_test.cpp: Add check for equal_range method when the search value
	is not in the set.
